# playlist_handler_backend

./: .gitignore  .pre-commit-config.yaml  Makefile  manage.py  my.cnf  pyproject.toml
auth/: views.py
playlist_handler/: asgi.py  settings.py  urls.py  wsgi.py
tracks/: admin.py  models.py  serializers.py  urls.py  views.py
tracks/migrations/: 0001_initial.py  0002_remove_artist_link_artist_links.py  0003_artistlink_tracklink_rename_name_track_title_and_more.py  0004_alter_artistlink_artist_alter_tracklink_track.py  0005_alter_artistlink_options_alter_tracklink_options_and_more.py  0006_alter_artistlink_options_alter_tracklink_options.py
tracks/templates/tracks/: add.html  artist_detail.html  index.html  track_detail.html
